force-app/main/default/objects/JU_BPOGoal__mdt/JU_BPOGoal__mdt.object-meta.xml
<CustomObject>
    <label>住環境_作図積算BPO目標</label>
</CustomObject>