force-app/main/default/objects/JU_BPOGoal__mdt/fields/KGI__c.field-meta.xml
<CustomField>
    <fullName>KGI__c</fullName>
    <label>KGI目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>