force-app/main/default/objects/JU_BPOGoal__mdt/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>