force-app/main/default/objects/JU_BPOGoal__mdt/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <label>並び順</label>
    <length>255</length>
    <type>Text</type>
</CustomField>