force-app/main/default/objects/JU_BPOGoal__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>KPI__c</columns>
    <columns>KGI__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>